마크업 이미지 경로 변경

--- a/html/tsst_p11.html
+++ b/html/tsst_p11.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 	<!-- //swiper -->
 	<script>
 		$(document).ready(function () {
@@ -57,24 +57,24 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
 
 			<!--메뉴>
-		<div id="menu">
-			<nav class="gnb">
-				<ul class="gnb_li">
-					<li><a href="tsst_p23.html" title="HOME" >HOME</a></li>
-					<li><a href="tsst_p26_1.html" title="종목추천" >종목추천</a></li>
-					<li><a href="tsst_p28_1.html" title="슈퍼스탁 1호" >슈퍼스탁1호</a></li>
-					<li><a href="tsst_p30_1.html" title="슈퍼스탁 2호" >슈퍼스탁2호</a></li>
-					<li><a href="#" title="투자점수" >투자점수</a></li>
-					<li style="padding-right: 30px;"><a href="#" title="업종/테마" >업종/테마</a></li>
-				</ul>
-			</nav>
-		</div-->
+			<div id="menu">
+				<nav class="gnb">
+					<ul class="gnb_li">
+						<li><a href="tsst_p23.html" title="HOME" >HOME</a></li>
+						<li><a href="tsst_p26_1.html" title="종목추천" >종목추천</a></li>
+						<li><a href="tsst_p28_1.html" title="슈퍼스탁 1호" >슈퍼스탁1호</a></li>
+						<li><a href="tsst_p30_1.html" title="슈퍼스탁 2호" >슈퍼스탁2호</a></li>
+						<li><a href="#" title="투자점수" >투자점수</a></li>
+						<li style="padding-right: 30px;"><a href="#" title="업종/테마" >업종/테마</a></li>
+					</ul>
+				</nav>
+			</div-->
 
 			<!--2depth 메뉴-->
 			<div class="sub_menu">
@@ -89,13 +89,11 @@
 				<div style="position: relative;">
 					<div class="item">
 						<p class="logo"><a href="/stockbot/search.php?sn=122900"><img
-									src="http://menu.itooza.com/sic/cominfo/A122900.jpg" alt="회사로고"
-									onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></a></p>
+									src="https://kimg.choicestock.co.kr/img/logo/122900.jpg" alt="회사로고"
+									onerror='this.src="../images/common//empty_logo.jpg";' /></a></p>
 						<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=122900">아이마켓코리아</a></p>
 					</div>
-					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img
-								src="http://menu.itooza.com/minwise/t-sst/cont/ico_txt_blue_chip.png" alt="우량주" /></a>
-					</p>
+					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img src="../images/cont/ico_txt_blue_chip.png" alt="우량주" /></a></p>
 					<p class="desc">인터파크 계열의 B2B 전자상거래 회사</p>
 				</div>
 				<div class="tbl_wrap02">
@@ -109,16 +107,16 @@
 						<thead>
 							<tr>
 								<th class="th01"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_analysis_tbl_01.png"
+										src="../images/cont/add/txt_analysis_tbl_01.png"
 										class="pdl_10" alt="투자의견" /></th>
 								<th class="th02"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_analysis_tbl_02.png"
+										src="../images/cont/add/txt_analysis_tbl_02.png"
 										class="pdl_10" alt="목표가" /></th>
 								<th class="th03"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_01.png"
+										src="../images/cont/add/txt_target_tbl_01.png"
 										class="pdl_10" alt="추천가" /></th>
 								<th class="th04"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_analysis_tbl_04.png"
+										src="../images/cont/add/txt_analysis_tbl_04.png"
 										style="height: 17px;" class="pdl_15" alt="기대수익률" /></th>
 							</tr>
 						</thead>
@@ -131,10 +129,10 @@
 							</tr>
 							<tr>
 								<th class="th05" colspan=2><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_recommend_tbl_add1.png"
+										src="../images/cont/add/txt_recommend_tbl_add1.png"
 										class="pdl_10" alt="상승시 분할 매도가" /></th>
 								<th class="th06" colspan=2><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_recommend_tbl_add2.png"
+										src="../images/cont/add/txt_recommend_tbl_add2.png"
 										class="pdl_10" alt="하락시 손절 매도가" /></th>
 							</tr>
 							<tr>
@@ -152,27 +150,27 @@
 
 			<!--신규매수, 비중확대 하단 컨텐츠-->
 			<div class="inbox score_wrap">
-				<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_01.png" alt="종합 분석 결과" /></h5>
+				<h5><img src="../images/cont/h4_tit_01.png" alt="종합 분석 결과" /></h5>
 				<p class="total_score"> <span class="score">221</span><span class="txt">점</span> </p>
 				<ul class="instrument_wrap">
 					<li>
-						<p class="tit"><img src="http://menu.itooza.com/minwise/t-sst/cont/txt_score_type3.png"
+						<p class="tit"><img src="../images/cont/txt_score_type3.png"
 								alt="수급분석" /></p>
-						<img src="http://menu.itooza.com/minwise/t-sst/cont/score/img_score_instrument_091.png"
+						<img src="../images/cont/score/img_score_instrument_091.png"
 							class="img_instrument" alt="점수이미지" />
 						<p class="score"><span>91</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="http://menu.itooza.com/minwise/t-sst/cont/txt_score_type2.png"
+						<p class="tit"><img src="../images/cont/txt_score_type2.png"
 								alt="밸류에이션" /></p>
-						<img src="http://menu.itooza.com/minwise/t-sst/cont/score/img_score_instrument_090.png"
+						<img src="../images/cont/score/img_score_instrument_090.png"
 							class="img_instrument" alt="점수이미지" />
 						<p class="score"><span>90</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="http://menu.itooza.com/minwise/t-sst/cont/txt_score_type1.png"
+						<p class="tit"><img src="../images/cont/txt_score_type1.png"
 								alt="펀더멘탈" /></p>
-						<img src="http://menu.itooza.com/minwise/t-sst/cont/score/img_score_instrument_040.png"
+						<img src="../images/cont/score/img_score_instrument_040.png"
 							class="img_instrument" alt="점수이미지" />
 						<p class="score"><span>40</span>점</p>
 					</li>
@@ -189,7 +187,7 @@
 						</div>
 						<!--투자포인트-->
 						<div class="inbox">
-							<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_02.png?pp=001"
+							<h5><img src="../images/cont/h4_tit_02.png?pp=001"
 									alt="투자 포인트" /></h5>
 							<ul class="investment_point">
 								<li>2016년 4분기 연결 실적: 매출액 1조800억원(전년 동기비 +24%), 영업이익 237억원(+89%), 순이익(지배) 72억원(+4%) ※
@@ -205,7 +203,7 @@
 					<div class="group2 dpb swiper-slide">
 						<!--주요 투자지표-->
 						<div class="inbox ofh">
-							<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_03.png?pp=001"
+							<h5><img src="../images/cont/h4_tit_03.png?pp=001"
 									alt="주요 투자지표" /></h5>
 							<ul class="total_info">
 								<li>
@@ -243,13 +241,12 @@
 
 						<!--v차트 분석 (특허출원)-->
 						<div class="inbox">
-							<!--h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_04.png" alt="v차트 분석 (특허출원)" /></h5-->
+							<!--h5><img src="../images/cont/h4_tit_04.png" alt="v차트 분석 (특허출원)" /></h5-->
 							<div style="padding: 0 20px;">
 								<div id="chartContainer1">
 									<iframe frameborder="0" allowtransparency="true"
 										style="border:none; overflow:hidden; width:100%; height:260px; margin-top:0px; margin-bottom:0px; border:0px0;"
-										scrolling="no"
-										src="https://m.itooza.com/etc/vchart_iframe.php?sn=122900"></iframe>
+										scrolling="no" src="https://m.itooza.com/etc/vchart_iframe.php?sn=122900"></iframe>
 								</div>
 							</div>
 						</div>
@@ -258,7 +255,7 @@
 					<div class="group3 dpb swiper-slide">
 						<!--기업정보-->
 						<div class="inbox">
-							<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_05.png?pp=001" alt="기업정보" />
+							<h5><img src="../images/cont/h4_tit_05.png?pp=001" alt="기업정보" />
 							</h5>
 							<table border="0" class="tbl_ainfo01">
 								<colgroup>
@@ -308,15 +305,14 @@
 				<div class="wrap">
 					<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 						제공하는 프리미엄 주식서비스 입니다.</p>
-					<p class="cs_txt"><span><img
-								src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png"
-								alt="고객센터" class="vam" style="height: 22px;"></span><span
+					<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
+								class="vam" style="height: 22px;"></span><span
 							class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span>
 					</p>
 				</div>
 			</footer>
 			<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img
-						src="http://menu.itooza.com/minwise/t-sst/cont/btn_join_1.png" alt="매매전략(추천가) 확인하기 
+						src="../images/cont/btn_join_1.png" alt="매매전략(추천가) 확인하기 
  부가서비스(22,000원)가입하기"> </a> </div>
 		</div>
 	</div>
