--- a/html/tsst_p13.html
+++ b/html/tsst_p13.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 	<!-- //swiper -->
 	<script>
 		$(document).ready(function () {
@@ -57,8 +57,7 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -95,28 +94,24 @@
 					</div>
 					<div class="rase_wrap">
 						<ul>
-							<li><span class="img"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_raise_01.png"
+							<li><span class="img"><img src='../images/cont/tit_port_raise_01.png'
 										style="height:20px; vertical-align:top;" alt="상승" /></span><span
 									class="num increase">▲3</span></li>
-							<li><span class="img"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_raise_02.png"
+							<li><span class="img"><img src="../images/cont/tit_port_raise_02.png"
 										style="height:20px; vertical-align:top;" alt="하락" /></span><span
 									class="num decrease">▼0</span></li>
-							<li><span class="img"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_raise_03.png"
+							<li><span class="img"><img src="../images/cont/tit_port_raise_03.png"
 										style="height:20px; vertical-align:top;" alt="보합" /></span><span
 									class="num ">0</span></li>
-							<li style="border:none;"><span class="img"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_raise_04.png"
+							<li style="border:none;"><span class="img"><img src="../images/cont/tit_port_raise_04.png"
 										style="height:20px; vertical-align:top;" alt="기업수" /></span><span
 									class="num ">3</span></li>
 						</ul>
 					</div>
 					<div class="item_wrap"> <a href="/stockbot/search.php?sn=096770">
-							<p class="tit"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_raise_05.png"
+							<p class="tit"><img src="../images/cont/tit_port_raise_05.png"
 									style="height:45px; vertical-align:top;" alt="최고상승주" /></p>
-							<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A096770.jpg"
+							<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/096770.jpg"
 									style="height:45px; vertical-align:top;" /></p>
 							<div style="width:110px;">
 								<p class="name">SK이노베이션</p>
@@ -242,16 +237,14 @@
 				<div class="wrap">
 					<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 						제공하는 프리미엄 주식서비스 입니다.</p>
-					<p class="cs_txt"><span><img
-								src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png"
-								alt="고객센터" class="vam" style="height: 22px;"></span><span
+					<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
+								class="vam" style="height: 22px;"></span><span
 							class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span>
 					</p>
 				</div>
 			</footer>
 			<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img
-						src="http://menu.itooza.com/minwise/t-sst/cont/btn_join_2.png"
-						alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
+						src="../images/cont/btn_join_2.png" alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
 		</div>
 	</div>
 </body>
