--- a/html/tsst_p14.html
+++ b/html/tsst_p14.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 	<!-- //swiper -->
 	<script>
 		$(document).ready(function () {
@@ -57,8 +57,7 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -83,9 +82,8 @@
 			<div class="index_section sub_wrap">
 				<div class="inbox score_wrap" style="border-top: 2px solid #feda57 !important;">
 					<div class="rank_no1_item">
-						<p class="bullet_no1"><img src="http://menu.itooza.com/minwise/t-sst/cont/ico_rank_no1.png"
-								alt="1위" /></p>
-						<p class="logo floatleft"><img src="http://menu.itooza.com/sic/cominfo/A037350.jpg" alt="logo">
+						<p class="bullet_no1"><img src="../images/cont/ico_rank_no1.png" alt="1위" /></p>
+						<p class="logo floatleft"><img src="https://kimg.choicestock.co.kr/img/logo/037350.jpg" alt="logo">
 						</p>
 						<p class="name">성도이엔지</p>
 					</div>
@@ -93,34 +91,32 @@
 							class="txt">점</span> </p>
 					<ul class="instrument_wrap">
 						<li>
-							<p class="tit"><img alt="수급분석"
-									src="http://menu.itooza.com/minwise/t-sst/cont/txt_score_type3.png"></p>
+							<p class="tit"><img alt="수급분석" src="../images/cont/txt_score_type3.png"></p>
 							<img alt="점수이미지" class="img_instrument"
-								src="http://menu.itooza.com/minwise/t-sst/cont/score/img_score_instrument_077.png">
+								src="../images/cont/score/img_score_instrument_077.png">
 							<p class="score"><span>77</span>점</p>
 						</li>
 						<li>
-							<p class="tit"><img alt="밸류에이션"
-									src="http://menu.itooza.com/minwise/t-sst/cont/txt_score_type2.png"></p>
+							<p class="tit"><img alt="밸류에이션" src="../images/cont/txt_score_type2.png"></p>
 							<img alt="점수이미지" class="img_instrument"
-								src="http://menu.itooza.com/minwise/t-sst/cont/score/img_score_instrument_100.png">
+								src="../images/cont/score/img_score_instrument_100.png">
 							<p class="score"><span>100</span>점</p>
 						</li>
 						<li>
-							<p class="tit"><img alt="펀더멘탈"
-									src="http://menu.itooza.com/minwise/t-sst/cont/txt_score_type1.png"></p>
+							<p class="tit"><img alt="펀더멘탈" src="../images/cont/txt_score_type1.png"></p>
 							<img alt="점수이미지" class="img_instrument"
-								src="http://menu.itooza.com/minwise/t-sst/cont/score/img_score_instrument_100.png">
+								src="../images/cont/score/img_score_instrument_100.png">
 							<p class="score"><span>100</span>점</p>
 						</li>
 					</ul>
-					<p class="clear" style="background-color: #eee; margin:10px 5px 0 ; padding: 10px 0; text-align: center;"><img src="../images/cont/txt_search_bot_info.png"
-							alt="종합점수(100점 만점) = 기업분석 + 수급분석" style="height:18px; "></p>
+					<p class="clear"
+						style="background-color: #eee; margin:10px 5px 0 ; padding: 10px 0; text-align: center;"><img
+							src="../images/cont/txt_search_bot_info.png" alt="종합점수(100점 만점) = 기업분석 + 수급분석"
+							style="height:18px; "></p>
 				</div>
 				<div style="border:none; clear:left; margin-top:10px;" class="tbl_wrap">
-					<p class="mgb_5 pdr_10 txt_right"> <img
-							src="http://menu.itooza.com/minwise/t-sst/cont/txt_mvp_score_100.png" alt="MVP 점수:100점 기준"
-							style="width: 110px;"> </p>
+					<p class="mgb_5 pdr_10 txt_right"> <img src="../images/cont/txt_mvp_score_100.png"
+							alt="MVP 점수:100점 기준" style="width: 110px;"> </p>
 					<table cellspacing="0" cellpadding="0" style="width:100%;">
 						<colgroup>
 							<col width="10%">
@@ -131,16 +127,15 @@
 						</colgroup>
 						<thead>
 							<tr>
-								<th class="nonebg"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/th_rank_tbl_01.png" alt="순위">
+								<th class="nonebg"><img src="../images/cont/th_rank_tbl_01.png" alt="순위">
 								</th>
-								<th><img src="http://menu.itooza.com/minwise/t-sst/cont/th_rank_tbl_02.png" alt="종목명">
+								<th><img src="../images/cont/th_rank_tbl_02.png" alt="종목명">
 								</th>
-								<th><img src="http://menu.itooza.com/minwise/t-sst/cont/th_rank_tbl_03.png" alt="mvp점수">
+								<th><img src="../images/cont/th_rank_tbl_03.png" alt="mvp점수">
 								</th>
-								<th><img src="http://menu.itooza.com/minwise/t-sst/cont/th_rank_tbl_04.png" alt="주가">
+								<th><img src="../images/cont/th_rank_tbl_04.png" alt="주가">
 								</th>
-								<th><img src="http://menu.itooza.com/minwise/t-sst/cont/th_rank_tbl_05.png" alt="등락률">
+								<th><img src="../images/cont/th_rank_tbl_05.png" alt="등락률">
 								</th>
 							</tr>
 						</thead>
@@ -251,15 +246,13 @@
 			<div class="wrap">
 				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 					제공하는 프리미엄 주식서비스 입니다.</p>
-				<p class="cs_txt"><span><img
-							src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터"
+				<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
 							class="vam" style="height: 22px;"></span><span
 						class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
 			</div>
 		</footer>
 		<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img
-					src="http://menu.itooza.com/minwise/t-sst/cont/btn_join_2.png"
-					alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
+					src="../images/cont/btn_join_2.png" alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
 	</div>
 </body>
 
