--- a/html/tsst_p24.html
+++ b/html/tsst_p24.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 			<header id="header">
 				<div class="top">
 					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+								src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -74,46 +74,46 @@
 		<div id="ss_wrap" class="tsst_ver">
 			<div class="intro-wrap">
 				<div class="intro-top">
-					<p><img src="http://menu.itooza.com/minwise/t-sst/cont/img_intro_visual2.png" class="w100per"
+					<p><img src="../images/cont/img_intro_visual2.png" class="w100per"
 							alt="슈퍼스탁이란?"></p>
 				</div>
 				<div class="intro-mid">
-					<p><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_intro_manual.png" alt="슈퍼스탁, 이렇게 이용하세요!">
+					<p><img src="../images/cont/tit_intro_manual.png" alt="슈퍼스탁, 이렇게 이용하세요!">
 					</p>
 				</div>
 				<div class="intro-manual">
 					<div class="m01">
-						<h3><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_intro_manual_01.png" alt="종목추천">
+						<h3><img src="../images/cont/tit_intro_manual_01.png" alt="종목추천">
 						</h3>
 						<p class="m-cont">
-							<img src="http://menu.itooza.com/minwise/t-sst/cont/txt_intro_manual_01.png"
+							<img src="../images/cont/txt_intro_manual_01.png"
 								alt="- MVP 로봇엔진이 발굴한 우량주, 성장주, 턴어라운드 종목 중 1~2 종목을 매일 제공 합니다.- 매수 시기를 스스로 판단 할 수 있는 투자자에게 적합  합니다.">
 						</p>
 					</div>
 					<div class="m02">
-						<h3><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_intro_manual_02.png" alt="종목추천">
+						<h3><img src="../images/cont/tit_intro_manual_02.png" alt="종목추천">
 						</h3>
 						<p class="m-cont">
-							<img src="http://menu.itooza.com/minwise/t-sst/cont/txt_intro_manual_02_1.png"
+							<img src="../images/cont/txt_intro_manual_02_1.png"
 								alt="- MVP 로봇엔진이 발굴한 우량주, 성장주, 턴어라운드 종목 중 1~2 종목을 매일 제공 합니다.- 매수 시기를 스스로 판단 할 수 있는 투자자에게 적합  합니다."
 								class="pdb_30">
-							<img src="http://menu.itooza.com/minwise/t-sst/cont/txt_intro_manual_02_2.png"
+							<img src="../images/cont/txt_intro_manual_02_2.png"
 								alt="- MVP 로봇엔진이 발굴한 우량주, 성장주, 턴어라운드 종목 중 1~2 종목을 매일 제공 합니다.- 매수 시기를 스스로 판단 할 수 있는 투자자에게 적합  합니다.">
 						</p>
 					</div>
 					<div class="m03">
-						<h3><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_intro_manual_03.png" alt="종목추천">
+						<h3><img src="../images/cont/tit_intro_manual_03.png" alt="종목추천">
 						</h3>
 						<p class="m-cont">
-							<img src="http://menu.itooza.com/minwise/t-sst/cont/txt_intro_manual_03.png"
+							<img src="../images/cont/txt_intro_manual_03.png"
 								alt="- MVP 로봇엔진이 발굴한 우량주, 성장주, 턴어라운드 종목 중 1~2 종목을 매일 제공 합니다.- 매수 시기를 스스로 판단 할 수 있는 투자자에게 적합  합니다.">
 						</p>
 					</div>
 					<div class="m04">
-						<h3><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_intro_manual_04.png" alt="종목추천">
+						<h3><img src="../images/cont/tit_intro_manual_04.png" alt="종목추천">
 						</h3>
 						<p class="m-cont">
-							<img src="http://menu.itooza.com/minwise/t-sst/cont/txt_intro_manual_04.png"
+							<img src="../images/cont/txt_intro_manual_04.png"
 								alt="- MVP 로봇엔진이 발굴한 우량주, 성장주, 턴어라운드 종목 중 1~2 종목을 매일 제공 합니다.- 매수 시기를 스스로 판단 할 수 있는 투자자에게 적합  합니다.">
 						</p>
 					</div>
@@ -133,7 +133,7 @@
 				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 					제공하는 프리미엄 주식서비스 입니다.</p>
 				<p class="cs_txt"><span><img
-							src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터"
+							src="../images/common/tit_footer_customer_center.png" alt="고객센터"
 							class="vam" style="height: 22px;"></span><span
 						class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
 			</div>
