--- a/html/tsst_p26_1.html
+++ b/html/tsst_p26_1.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 </head>
 
 <body>
@@ -43,8 +43,7 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -77,14 +76,11 @@
 					<div class="section_wrap section01" id="section01">
 						<ul>
 							<li><a href="/stockbot/ss_blist.php?nst=1&amp;jp=1"><img
-										src="http://menu.itooza.com/stobot/mobile/cont/cont_intro_1_1.png"
-										alt="우량주 종목"></a></li>
+										src="../images/cont/cont_intro_1_1.png" alt="우량주 종목"></a></li>
 							<li><a href="/stockbot/ss_blist.php?nst=2&amp;jp=1"><img
-										src="http://menu.itooza.com/stobot/mobile/cont/cont_intro_1_2.png"
-										alt="성장주 종목"></a></li>
+										src="../images/cont/cont_intro_1_2.png" alt="성장주 종목"></a></li>
 							<li style="margin:0;"><a href="/stockbot/ss_blist.php?nst=3&amp;jp=1"><img
-										src="http://menu.itooza.com/stobot/mobile/cont/cont_intro_1_3.png"
-										alt="턴어라운드 종목"></a></li>
+										src="../images/cont/cont_intro_1_3.png" alt="턴어라운드 종목"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -101,8 +97,8 @@
 					data-onewidth="-1" data-maxwidth="-1" data-limit="20" style="overflow-x: auto;">
 					<ul class="type02 scrollul basic">
 						<li><a href="tsst_p26_2.html">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A122900.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/122900.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/20월</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">아이마켓코리아, ‘실적 개선 & 배당 매력...</p>
 								<ul class="analysis_type">
@@ -113,8 +109,8 @@
 								<p class="target"><span>14,500</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=043650&st=2&sdt=20170320073645">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A043650.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/043650.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/20월</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">국순당, 신제품 판매 호조+자산가치 매력</p>
 								<ul class="analysis_type">
@@ -125,8 +121,8 @@
 								<p class="target"><span>9,300</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=071840&st=2&sdt=20170317085818">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A071840.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/071840.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/17금</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">롯데하이마트, ‘실적 증가 & 저평가 & 배...</p>
 								<ul class="analysis_type">
@@ -137,8 +133,8 @@
 								<p class="target"><span>59,500</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=005500&st=2&sdt=20170317084853">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A005500.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/005500.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/17금</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">삼진제약, 실적 성장 + 배당 매력</p>
 								<ul class="analysis_type">
@@ -149,8 +145,8 @@
 								<p class="target"><span>40,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=035150&st=2&sdt=20170316090817">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A035150.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/035150.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/16목</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">백산, ‘실적 성장 지속 & 수익성 대비 저...</p>
 								<ul class="analysis_type">
@@ -161,8 +157,8 @@
 								<p class="target"><span>10,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=035810&st=2&sdt=20170316083009">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A035810.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/035810.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/16목</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">이지바이오, 구조조정+육계 가격 상승 효과</p>
 								<ul class="analysis_type">
@@ -173,8 +169,8 @@
 								<p class="target"><span>8,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=131030&st=2&sdt=20170315085715">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A131030.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/131030.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/15수</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">디에이치피코리아, ‘실적 성장 지속 & 여...</p>
 								<ul class="analysis_type">
@@ -185,8 +181,8 @@
 								<p class="target"><span>10,800</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=006040&st=2&sdt=20170314200033">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A006040.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/006040.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/15수</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">동원산업, 신규 어선 도입+어가 상승 기대</p>
 								<ul class="analysis_type">
@@ -197,8 +193,8 @@
 								<p class="target"><span>416,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=035510&st=2&sdt=20170314085718">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A035510.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/035510.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/14화</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">신세계 I&C, ‘자산가치 대비 저평가 & 실...</p>
 								<ul class="analysis_type">
@@ -209,8 +205,8 @@
 								<p class="target"><span>86,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=005710&st=2&sdt=20170313195516">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A005710.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/005710.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/14화</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">대원산업, 환율 안정으로 실적 턴어라운드</p>
 								<ul class="analysis_type">
@@ -221,8 +217,8 @@
 								<p class="target"><span>10,600</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=039440&st=2&sdt=20170313090707">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A039440.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/039440.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/13월</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">에스티아이, 전방산업 증설에 실적성장</p>
 								<ul class="analysis_type">
@@ -233,8 +229,8 @@
 								<p class="target"><span>13,600</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=065680&st=2&sdt=20170313090624">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A065680.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/065680.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/13월</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">우주일렉트로, ‘실적 개선 & 현금 풍부 &...</p>
 								<ul class="analysis_type">
@@ -245,8 +241,8 @@
 								<p class="target"><span>21,700</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=040420&st=2&sdt=20170310090143">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A040420.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/040420.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/10금</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">정상제이엘에스, ‘실적 개선 & 배당 매력...</p>
 								<ul class="analysis_type">
@@ -257,8 +253,8 @@
 								<p class="target"><span>9,200</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=122990&st=2&sdt=20170310085238">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A122990.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/122990.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/10금</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">와이솔, ‘실적 성장 지속’</p>
 								<ul class="analysis_type">
@@ -269,8 +265,8 @@
 								<p class="target"><span>19,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=023150&st=2&sdt=20170309090208">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A023150.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/023150.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/09목</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">MH에탄올, ‘수익성 상승으로 실적 증가 &...</p>
 								<ul class="analysis_type">
@@ -281,8 +277,8 @@
 								<p class="target"><span>9,600</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=051360&st=2&sdt=20170308163934">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A051360.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/051360.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/09목</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">토비스, 카지노모니터 업황 호조</p>
 								<ul class="analysis_type">
@@ -293,8 +289,8 @@
 								<p class="target"><span>10,600</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=010120&st=2&sdt=20170308085514">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A010120.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/010120.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/08수</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">LS산전, ‘평균 대비 저평가 & 실적 선방 ...</p>
 								<ul class="analysis_type">
@@ -305,8 +301,8 @@
 								<p class="target"><span>56,500</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=149950&st=2&sdt=20170308084035">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A149950.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/149950.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/08수</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">아바텍, 신규 사업으로 턴어라운드 기대</p>
 								<ul class="analysis_type">
@@ -317,8 +313,8 @@
 								<p class="target"><span>8,600</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=096770&st=2&sdt=20170307084730">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A096770.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/096770.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/07화</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">SK이노베이션, ‘실적 증가 & 저평가 & 배...</p>
 								<ul class="analysis_type">
@@ -329,8 +325,8 @@
 								<p class="target"><span>195,000</span>원</p>
 							</a></li>
 						<li><a href="/stockbot/ss_view.php?sc=007310&st=2&sdt=20170306205505">
-								<p class="logo"><img src="http://menu.itooza.com/sic/cominfo/A007310.jpg" alt=""
-										onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></p>
+								<p class="logo"><img src="https://kimg.choicestock.co.kr/img/logo/007310.jpg" alt=""
+										onerror='this.src="../images/common//empty_logo.jpg";' /></p>
 								<p class="date">03/07화</p>
 								<p class="tit" style="height: 49px;overflow:hidden;">오뚜기, 라면 점유율 확대 기대</p>
 								<ul class="analysis_type">
@@ -342,8 +338,8 @@
 							</a></li>
 					</ul>
 				</div>
-				<div id="spinnerID" style="width:100%;text-align:center;clear:both;margin:15px 0px;"><img
-						src="http://nimage002.commutil.kr/itoozamobile/images/ico_spinner.gif" style="width: 30px;" />
+				<div id="spinnerID" style="width:100%;text-align:center;clear:both;margin:15px 0px;">
+					<img src="../images/common/ico_spinner.gif" style="width: 30px;" />
 				</div>
 			</div>
 		</div>
@@ -357,8 +353,7 @@
 			<div class="wrap">
 				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 					제공하는 프리미엄 주식서비스 입니다.</p>
-				<p class="cs_txt"><span><img
-							src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터"
+				<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
 							class="vam" style="height: 22px;"></span><span
 						class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
 			</div>
