--- a/html/tsst_p28_2.html
+++ b/html/tsst_p28_2.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 </head>
 
 <body>
@@ -43,8 +43,7 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -76,8 +75,8 @@
 				<div style="position: relative;">
 					<div class="item">
 						<p class="logo"><a href="/stockbot/search.php?sn=010950"><img
-									src="http://menu.itooza.com/sic/cominfo/A010950.jpg" alt="회사로고"
-									onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></a></p>
+									src="https://kimg.choicestock.co.kr/img/logo/010950.jpg" alt="회사로고"
+									onerror='this.src="../images/common//empty_logo.jpg";' /></a></p>
 						<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=010950">S-Oil</a></p>
 					</div>
 					<p class="desc">사우디아라비아 국영석유회사 아람코 계열의 정유업체.</p>
@@ -92,18 +91,14 @@
 						</colgroup>
 						<thead>
 							<tr>
-								<th class="th01"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_01.png"
-										class="pdl_10" alt="추천가" /></th>
-								<th class="th02"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_02.png"
-										class="pdl_10" alt="현재가" /></th>
-								<th class="th03"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_03.png"
-										class="pdl_10" alt="수익률" /></th>
-								<th class="th04"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_04.png"
-										class="pdl_15" alt="보유기간" /></th>
+								<th class="th01"><img src="../images/cont/add/txt_target_tbl_01.png" class="pdl_10"
+										alt="추천가" /></th>
+								<th class="th02"><img src="../images/cont/add/txt_target_tbl_02.png" class="pdl_10"
+										alt="현재가" /></th>
+								<th class="th03"><img src="../images/cont/add/txt_target_tbl_03.png" class="pdl_10"
+										alt="수익률" /></th>
+								<th class="th04"><img src="../images/cont/add/txt_target_tbl_04.png" class="pdl_15"
+										alt="보유기간" /></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -128,7 +123,7 @@
 					</div>
 					<!--투자포인트-->
 					<div class="inbox">
-						<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_06.png" alt="추천 당시 투자 포인트" />
+						<h5><img src="../images/cont/h4_tit_06.png" alt="추천 당시 투자 포인트" />
 						</h5>
 						<ul class="investment_point">
 							<li>PER 8.8배, PBR 1.53배, ROE 17.4%로 수익가치 대비 저평가</li>
@@ -153,8 +148,7 @@
 			<div class="wrap">
 				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 					제공하는 프리미엄 주식서비스 입니다.</p>
-				<p class="cs_txt"><span><img
-							src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터"
+				<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
 							class="vam" style="height: 22px;"></span><span
 						class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
 			</div>
