--- a/html/tsst_p30_1.html
+++ b/html/tsst_p30_1.html
@@ -31,7 +31,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 </head>
 
 <body>
@@ -42,8 +42,7 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -75,115 +74,101 @@
 			<div class="sub_wrap" style="position:relative;">
 				<!--포트메뉴 : 선택된 메뉴 a에 클래스 focus 부여-->
 				<div class="port_box">
-					<h2 class="port_tit"> <img src="http://menu.itooza.com/minwise/t-sst/cont/tit_img_port1.png"
-							alt="슈퍼스탁 1호 - 월 1회 매매"> </h2>
+					<h2 class="port_tit"> <img src="../images/cont/tit_img_port1.png" alt="슈퍼스탁 1호 - 월 1회 매매"> </h2>
 					<div class="port_data">
-						<p class="floatleft txt_right" style="width: 35%;"><img
-								src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_rate2.png" alt="수익률"
-								style="height: 18px; padding-top: 2px;"></p>
+						<p class="floatleft txt_right" style="width: 35%;"><img src="../images/cont/tit_port_rate2.png"
+								alt="수익률" style="height: 18px; padding-top: 2px;"></p>
 						<p class="floatleft bold txt_center" style="width: 65%;"><span class="num increase"
 								style="line-height: 26px; font-size: 26px;">110.2</span><span>%</span></p>
-						<p class="clear pdt_5"><img
-								src="http://menu.itooza.com/minwise/t-sst/cont/txt_img_port1_date.png"
-								alt="12년 6월 7일 이후" style="height: 19px;"></p>
+						<p class="clear pdt_5"><img src="../images/cont/txt_img_port1_date.png" alt="12년 6월 7일 이후"
+								style="height: 19px;"></p>
 					</div>
-					<p class="port_info"><img src="http://menu.itooza.com/minwise/t-sst/cont/txt_img_port1_info.png"
-							alt="적극 수익 추구형 투자자를 위한 최선의 포트폴리오
+					<p class="port_info"><img src="../images/cont/txt_img_port1_info.png" alt="적극 수익 추구형 투자자를 위한 최선의 포트폴리오
 "> </p>
 				</div>
 
 				<!--매매전략-->
 				<div class="cont_box">
-					<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h5_port01.png" alt="매매전략 (월 1회 매매)" /></h5>
+					<h5><img src="../images/cont/h5_port01.png" alt="매매전략 (월 1회 매매)" /></h5>
 					<div class="li_wrap" data-key="mm" data-addkey="" data-page="1" data-end="0" data-onewidth="302"
 						data-maxwidth="3020" data-limit="10"
 						style="-webkit-overflow-scrolling:touch; margin:0 10px;  overflow-x: auto;">
 						<ul class="list_li2 scrollul" style="width: 3020px;">
 							<li><a href="/stockbot/mm_view.php?ud=16">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">2017년 3월 매매 진행예정...누적 116% 수익률</p>
 								</a>
 								<p class="time">03/07 19:00</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=15">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">2017년 2월 매매 진행예정...누적 109% 수익률</p>
 								</a>
 								<p class="time">02/07 19:20</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=14">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">2017년 1월 매매 진행예정...누적 113% 수익률</p>
 								</a>
 								<p class="time">01/10 18:34</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=13">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">올해 마지막 12월 매매 진행예정...누적 101% 수익률</p>
 								</a>
 								<p class="time">12/06 19:21</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=12">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">11월 수익실현 및 신규매수 진행...누적수익률 110%</p>
 								</a>
 								<p class="time">11/08 19:15</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=11">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">10월 수익실현 및 신규매수 진행...누적수익률 127%</p>
 								</a>
 								<p class="time">10/11 17:39</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=10">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">포트구성, 20개 종목 매수하세요</p>
 								</a>
 								<p class="time">09/07 10:41</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=8">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">8월 수익실현 및 신규매수 진행...누적수익률 134%</p>
 								</a>
 								<p class="time">08/11 23:56</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=1">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">7월 2종목 나란히 50% 수익..누적수익률 126%</p>
 								</a>
 								<p class="time">07/14 08:25</p>
 							</li>
 							<li><a href="/stockbot/mm_view.php?ud=7">
-									<p class="logo_img"><img
-											onerror="this.src='http://menu.itooza.com/sic/cominfo/empty_logo.jpg';"
-											alt="logo" src="http://menu.itooza.com/minwise/t-sst/cont/ico_port1.jpg">
+									<p class="logo_img"><img onerror="this.src='../images/common//empty_logo.jpg';"
+											alt="logo" src="../images/cont/ico_port1.jpg">
 									</p>
 									<p class="title" style="height: 42px;">6월 엘디티 47% 최종실현...포트 누적수익률 112%</p>
 								</a>
@@ -205,10 +190,9 @@
 				<!--선택된 메뉴의 컨텐츠 경우 display: none; 제거-->
 				<div id="id_li01" style="margin: 10px 15px;">
 					<div style="position:relative; margin-bottom:10px;">
-						<p><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port1.png" alt="스토봇 포트 1호"
-								style="height:22px;" /></p>
+						<p><img src="../images/cont/tit_port1.png" alt="스토봇 포트 1호" style="height:22px;" /></p>
 						<p style="position:absolute; right:10px; top: 2px;"><span><img
-									src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_date.png" alt="스토봇 포트 1호"
+									src="../images/cont/tit_port_date.png" alt="스토봇 포트 1호"
 									style="height:20px; vertical-align:middle; margin-right:5px;" /></span><span
 								style="font-weight:bold; font-size:13px; color: #2A3373; padding-top:3px;">4월
 								5일(수)</span></p>
@@ -225,100 +209,87 @@
 							</colgroup>
 							<thead>
 								<tr>
-									<th class="nonebg"><img alt="번호"
-											src="http://menu.itooza.com/minwise/t-sst/index/th_index_tbl_01.png"></th>
-									<th><img alt="종목명"
-											src="http://menu.itooza.com/minwise/t-sst/index/th_index_tbl_02.png"></th>
-									<th><img alt="현재가"
-											src="http://menu.itooza.com/minwise/t-sst/index/th_index_tbl_03.png"></th>
-									<th><img alt="비중"
-											src="http://menu.itooza.com/minwise/t-sst/index/th_index_tbl_04.png"></th>
-									<th><img alt="수익률"
-											src="http://menu.itooza.com/minwise/t-sst/index/th_index_tbl_05.png"></th>
+									<th class="nonebg"><img alt="번호" src="../images/index/th_index_tbl_01.png"></th>
+									<th><img alt="종목명" src="../images/index/th_index_tbl_02.png"></th>
+									<th><img alt="현재가" src="../images/index/th_index_tbl_03.png"></th>
+									<th><img alt="비중" src="../images/index/th_index_tbl_04.png"></th>
+									<th><img alt="수익률" src="../images/index/th_index_tbl_05.png"></th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td class="num"><img alt="0"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_01.png"></td>
+									<td class="num"><img alt="0" src="../images/index/ico_num_01.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=007700">F&F</a></td>
 									<td class="price">26,100</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">53.5%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="1"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_02.png"></td>
+									<td class="num"><img alt="1" src="../images/index/ico_num_02.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=036000">예림당</a></td>
 									<td class="price">6,690</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">38.9%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="2"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_03.png"></td>
+									<td class="num"><img alt="2" src="../images/index/ico_num_03.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=096770">SK이노베이션</a></td>
 									<td class="price">167,500</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">8.4%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="3" src="http://menu.itooza.com/minwise/t-sst/index/ico_num_04.png"></td>
+									<td class="num"><img alt="3" src="../images/index/ico_num_04.png"></td>
 									<td class="name"><a href="/minsstockbot/search.php?sn=069260">TKG휴켐스</a></td>
 									<td class="price">21,600</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 decrease">-3.4%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="4"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_05.png"></td>
+									<td class="num"><img alt="4" src="../images/index/ico_num_05.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=131220">대한과학</a></td>
 									<td class="price">7,130</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">4.9%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="5"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_06.png"></td>
+									<td class="num"><img alt="5" src="../images/index/ico_num_06.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=042700">한미반도체</a></td>
 									<td class="price">15,900</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">2.9%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="6"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_07.png"></td>
+									<td class="num"><img alt="6" src="../images/index/ico_num_07.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=033290">코웰패션</a></td>
 									<td class="price">3,145</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">2.1%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="7"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_08.png"></td>
+									<td class="num"><img alt="7" src="../images/index/ico_num_08.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=022220">정산애강</a></td>
 									<td class="price">2,450</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">1.2%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="8"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_09.png"></td>
+									<td class="num"><img alt="8" src="../images/index/ico_num_09.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=036010">아비코전자</a></td>
 									<td class="price">7,300</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">1.1%</td>
 								</tr>
 								<tr>
-									<td class="num"><img alt="9"
-											src="http://menu.itooza.com/minwise/t-sst/index/ico_num_10.png"></td>
+									<td class="num"><img alt="9" src="../images/index/ico_num_10.png"></td>
 									<td class="name"><a href="/stockbot/search.php?sn=122990">와이솔</a></td>
 									<td class="price">15,600</td>
 									<td class="per1">5.0%</td>
 									<td class="per2 increase">0.6%</td>
 								</tr>
 								<tr>
-									<td style="background-color: #737fae; color: #fff; padding: 10px 0;" colspan="2">현금보유비중</td>
+									<td style="background-color: #737fae; color: #fff; padding: 10px 0;" colspan="2">
+										현금보유비중</td>
 									<td colspan="3" style="background-color: #f5f4e2;">0.0%</td>
 								</tr>
 							</tbody>
@@ -330,31 +301,30 @@
 				<!--선택된 메뉴의 컨텐츠 경우 display: none; 제거-->
 				<div id="id_li02" class="port_rate" style="display: none;">
 					<ul>
-						<li> <span class="img"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port1_02.png"
+						<li> <span class="img"><img src="../images/cont/tit_port1_02.png"
 									style="width: 140px; border:none; margin-top: 10px;" alt="스톡봇 1호" /></span> <span
-								class="txt"><img src="http://menu.itooza.com/minwise/t-sst/cont/img_port1.png"
-									style="width: 140px;" alt="적극수익추구형" /></span> </li>
-						<li> <span class="img"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_rate.png"
-									alt="누적수익률" /></span> <span class="num increase">118.4%</span> </li>
+								class="txt"><img src="../images/cont/img_port1.png" style="width: 140px;"
+									alt="적극수익추구형" /></span> </li>
+						<li> <span class="img"><img src="../images/cont/tit_port_rate.png" alt="누적수익률" /></span> <span
+								class="num increase">118.4%</span> </li>
 						</li>
-						<li> <span class="img"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_3m.png"
-									alt="최근 3개월" /></span> <span class="num increase">2.8%</span> </li>
-						<li> <span class="img"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_6m.png"
-									alt="최근 6개월" /></span> <span class="num increase">0.3%</span> </li>
-						<li> <span class="img"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_9m.png"
-									alt="최근 9개월" /></span> <span class="num increase">2.5%</span> </li>
-						<li> <span class="img"><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_port_1y.png"
-									alt="최근 1년" /></span> <span class="num increase">4.1%</span> </li>
+						<li> <span class="img"><img src="../images/cont/tit_port_3m.png" alt="최근 3개월" /></span> <span
+								class="num increase">2.8%</span> </li>
+						<li> <span class="img"><img src="../images/cont/tit_port_6m.png" alt="최근 6개월" /></span> <span
+								class="num increase">0.3%</span> </li>
+						<li> <span class="img"><img src="../images/cont/tit_port_9m.png" alt="최근 9개월" /></span> <span
+								class="num increase">2.5%</span> </li>
+						<li> <span class="img"><img src="../images/cont/tit_port_1y.png" alt="최근 1년" /></span> <span
+								class="num increase">4.1%</span> </li>
 					</ul>
 				</div>
 
 				<!--운영원칙-->
 				<!--선택된 메뉴의 컨텐츠 경우 display: none; 제거-->
 				<div id="id_li03" class="rule_wrap" style="margin: 10px 15px; display: none;">
-					<p class="tit"><img src="http://menu.itooza.com/minwise/t-sst/cont/txt_rule_port1.png"
-							alt="확실한 턴 어라운드 기업을 포트로 구성" /></p>
+					<p class="tit"><img src="../images/cont/txt_rule_port1.png" alt="확실한 턴 어라운드 기업을 포트로 구성" /></p>
 					<div>
-						<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_rule_port_1.png" alt="포트폴리오 특징" />
+						<h5><img src="../images/cont/tit_rule_port_1.png" alt="포트폴리오 특징" />
 						</h5>
 						<ul>
 							<li>턴 어라운드 종목을 초기에 발굴, 포트에 편입</li>
@@ -363,7 +333,7 @@
 						</ul>
 					</div>
 					<div>
-						<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/tit_rule_port_2.png" alt="포트 운영 원칙" />
+						<h5><img src="../images/cont/tit_rule_port_2.png" alt="포트 운영 원칙" />
 						</h5>
 						<ul>
 							<li>매월 1회만 매매합니다. 매매예정일을 확인하고, 해당 날짜에 매매전략에 제시된대로 그대로 매매하시면 됩니다.</li>
@@ -387,8 +357,7 @@
 			<div class="wrap">
 				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 					제공하는 프리미엄 주식서비스 입니다.</p>
-				<p class="cs_txt"><span><img
-							src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터"
+				<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
 							class="vam" style="height: 22px;"></span><span
 						class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
 			</div>
