--- a/html/tsst_p12.html
+++ b/html/tsst_p12.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 	<!-- //swiper -->
 	<script>
 		$(document).ready(function () {
@@ -50,19 +50,19 @@
 </head>
 
 <body>
-<div class="wrapper" id="topwrpperID"> 
-	<!--헤더/gnb 영역-->
-	<div class="top-wrap"> 
-		
-		<!--헤더-->
-		<header id="header">
-			<div class="top">
-				<h1><a href="http://m.itooza.com"><img src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁" ></a></h1>
-				<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
-			</div>
-		</header>
-		
-		<!--메뉴>
+	<div class="wrapper" id="topwrpperID">
+		<!--헤더/gnb 영역-->
+		<div class="top-wrap">
+
+			<!--헤더-->
+			<header id="header">
+				<div class="top">
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
+				</div>
+			</header>
+
+			<!--메뉴>
 		<div id="menu">
 			<nav class="gnb">
 				<ul class="gnb_li">
@@ -74,88 +74,102 @@
 					<li style="padding-right: 30px;"><a href="#" title="업종/테마" >업종/테마</a></li>
 				</ul>
 			</nav>
-		</div--> 
-		
-		<!--2depth 메뉴-->
-		<div class="sub_menu">
-			<nav class="nav">
-				<h2><span class="item">적중! 수익실현 종목</span></h2>
-			</nav>
+		</div-->
+
+			<!--2depth 메뉴-->
+			<div class="sub_menu">
+				<nav class="nav">
+					<h2><span class="item">적중! 수익실현 종목</span></h2>
+				</nav>
+			</div>
+		</div>
+
+
+		<div id="ss_wrap" class="tsst_ver">
+			<div class="cont_top_wrap">
+				<div style="position: relative;">
+					<div class="item">
+						<p class="logo"><a href="/stockbot/search.php?sn=010950"><img
+									src="https://kimg.choicestock.co.kr/img/logo/010950.jpg" alt="회사로고"
+									onerror='this.src="../images/common//empty_logo.jpg";' /></a></p>
+						<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=010950">S-Oil</a></p>
+					</div>
+					<p class="desc">사우디아라비아 국영석유회사 아람코 계열의 정유업체.</p>
+				</div>
+				<div class="tbl_wrap02">
+					<table cellpadding="0" cellspacing="0" class="tbl_target">
+						<colgroup>
+							<col width="25%" />
+							<col width="25%" />
+							<col width="25%" />
+							<col width="25%" />
+						</colgroup>
+						<thead>
+							<tr>
+								<th class="th01"><img src="../images/cont/add/txt_target_tbl_01.png" class="pdl_10"
+										alt="추천가" /></th>
+								<th class="th02"><img src="../images/cont/add/txt_target_tbl_02.png" class="pdl_10"
+										alt="현재가" /></th>
+								<th class="th03"><img src="../images/cont/add/txt_target_tbl_03.png" class="pdl_10"
+										alt="수익률" /></th>
+								<th class="th04"><img src="../images/cont/add/txt_target_tbl_04.png" class="pdl_15"
+										alt="보유기간" /></th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td class="td01"><span class=" price2">84,500</span><span class="mgr_5">원</span></td>
+								<td class="td02"><span class=" price2">101,000</span><span class="mgr_5">원</span></td>
+								<td class="td03 txt"><span class="f22 increase">19.5</span><span>%</span></td>
+								<td class="td04 txt nonebg"><span class="f16">60</span>일</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+			<div class="cont_bottom_wrap">
+				<div class="group1 dpb" style="min-height: 0 !important;">
+
+					<!--타이틀-->
+					<div class="inbox">
+						<div class="ainfo_com" style="padding:10px;"> <img src="/cmpg.png?md=0&cd=010950" alt="010950"
+								style=" width: 100%; height:auto;" /> </div>
+						<div class="tit_wrap"> S-oil, ‘수익가치 대비 저평가 & 실적 개선 지속 & 배당 매력’ </div>
+					</div>
+					<!--투자포인트-->
+					<div class="inbox">
+						<h5><img src="../images/cont/h4_tit_06.png" alt="추천 당시 투자 포인트" /></h5>
+						<ul class="investment_point">
+							<li>PER 8.8배, PBR 1.53배, ROE 17.4%로 수익가치 대비 저평가</li>
+							<li>2016년 4분기 추정 순이익(연결 지배) 3525억원(전년 동기비 +899%)..정제마진 상승으로 실적 개선세 지속 기대 ※ 실적 추정치는 최근 1개월간
+								증권사 추정치 평균</li>
+							<li>시가배당률 2.84%로 국고채 3년물 시장금리(1.68%)의 1.7배 </li>
+							<li>기관 매수 지속..순매수량: 1개월 누적 +86.2만주(지분 0.8%), 3개월 누적 +258만주(2.3%)</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<!--푸터-->
+			<footer id="footer" class="non_members">
+				<div style="background: #fff; padding: 15px 0;">
+					<p style=" width: 290px; margin: 0 auto; color: #000; text-align: center; line-height: 18px;">T슈퍼스탁이
+						제공하는 정보는 투자 참고사항 일뿐,<br />
+						투자권유 또는 주식거래를 목적으로 하지 않습니다.<br />
+						투자판단의 최종 책임은 이용자에게 있습니다.</p>
+				</div>
+				<div class="wrap">
+					<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
+						제공하는 프리미엄 주식서비스 입니다.</p>
+					<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
+								class="vam" style="height: 22px;"></span><span
+							class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span>
+					</p>
+				</div>
+			</footer>
+			<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img
+						src="../images/cont/btn_join_2.png" alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
 		</div>
 	</div>
-	
-	
-	<div id="ss_wrap" class="tsst_ver">
-		<div class="cont_top_wrap">
-			<div style="position: relative;">
-				<div class="item">
-					<p class="logo"><a href="/stockbot/search.php?sn=010950"><img src="http://menu.itooza.com/sic/cominfo/A010950.jpg" alt="회사로고" onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></a></p>
-					<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=010950">S-Oil</a></p>
-				</div>
-				<p class="desc">사우디아라비아 국영석유회사 아람코 계열의 정유업체.</p>
-			</div>
-			<div class="tbl_wrap02">
-				<table cellpadding="0" cellspacing="0" class="tbl_target">
-					<colgroup>
-					<col width="25%" />
-					<col width="25%" />
-					<col width="25%" />
-					<col width="25%" />
-					</colgroup>
-					<thead>
-						<tr>
-							<th class="th01"><img src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_01.png" class="pdl_10" alt="추천가" /></th>
-							<th class="th02"><img src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_02.png" class="pdl_10" alt="현재가" /></th>
-							<th class="th03"><img src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_03.png" class="pdl_10" alt="수익률" /></th>
-							<th class="th04"><img src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_04.png" class="pdl_15" alt="보유기간" /></th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td class="td01"><span class=" price2">84,500</span><span class="mgr_5">원</span></td>
-							<td class="td02"><span class=" price2">101,000</span><span class="mgr_5">원</span></td>
-							<td class="td03 txt"><span class="f22 increase">19.5</span><span>%</span></td>
-							<td class="td04 txt nonebg"><span class="f16">60</span>일</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</div>
-		<div class="cont_bottom_wrap">
-			<div class="group1 dpb" style="min-height: 0 !important;"> 
-				
-				<!--타이틀-->
-				<div class="inbox">
-					<div class="ainfo_com" style="padding:10px;"> <img src="/cmpg.png?md=0&cd=010950" alt="010950" style=" width: 100%; height:auto;" /> </div>
-					<div class="tit_wrap"> S-oil, ‘수익가치 대비 저평가 & 실적 개선 지속 & 배당 매력’ </div>
-				</div>
-				<!--투자포인트-->
-				<div class="inbox">
-					<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_06.png" alt="추천 당시 투자 포인트" /></h5>
-					<ul class="investment_point">
-						<li>PER 8.8배, PBR 1.53배, ROE 17.4%로 수익가치 대비 저평가</li>
-						<li>2016년 4분기 추정 순이익(연결 지배) 3525억원(전년 동기비 +899%)..정제마진 상승으로 실적 개선세 지속 기대 ※ 실적 추정치는 최근 1개월간 증권사 추정치 평균</li>
-						<li>시가배당률 2.84%로 국고채 3년물 시장금리(1.68%)의 1.7배 </li>
-						<li>기관 매수 지속..순매수량: 1개월 누적 +86.2만주(지분 0.8%), 3개월 누적 +258만주(2.3%)</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-		<!--푸터-->
-		<footer id="footer" class="non_members">
-			<div style="background: #fff; padding: 15px 0;">
-				<p style=" width: 290px; margin: 0 auto; color: #000; text-align: center; line-height: 18px;">T슈퍼스탁이 제공하는 정보는 투자 참고사항 일뿐,<br />
-					투자권유 또는 주식거래를 목적으로 하지 않습니다.<br />
-					투자판단의 최종 책임은 이용자에게 있습니다.</p>
-			</div>
-			<div class="wrap">
-				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
-					제공하는 프리미엄 주식서비스 입니다.</p>
-				<p class="cs_txt"><span><img src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터" class="vam" style="height: 22px;"></span><span class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
-			</div>
-		</footer>
-		<div class="btn_join_fixed"> <a href="javascript:ClickServiceNoMember();"> <img src="http://menu.itooza.com/minwise/t-sst/cont/btn_join_2.png" alt="수익 예상 종목 확인하기 부가서비스(22,000원)가입하기"> </a> </div>
-	</div>
-</div>
 </body>
+
 </html>
