--- a/html/tsst_p26_2.html
+++ b/html/tsst_p26_2.html
@@ -34,7 +34,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/common.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="../css/t-sst.css" media="all" />
 	<!-- js -->
-	<script type="text/javascript" src="../add_design.js"></script>
+	<script type="text/javascript" src="../css/add_design.js"></script>
 	<!-- //swiper -->
 	<script>
 		$(document).ready(function () {
@@ -58,8 +58,7 @@
 			<!--헤더-->
 			<header id="header">
 				<div class="top">
-					<h1><a href="http://m.itooza.com"><img
-								src="http://menu.itooza.com/minwise/t-sst/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
+					<h1><a href="http://m.itooza.com"><img src="../images/common/logo_tsst.png" alt="T슈퍼스탁"></a></h1>
 					<button class="btn_thome" type="button" onClick=""> <span>T인증 바로가기</span> </button>
 				</div>
 			</header>
@@ -91,12 +90,12 @@
 				<div style="position: relative;">
 					<div class="item">
 						<p class="logo"><a href="/stockbot/search.php?sn=122900"><img
-									src="http://menu.itooza.com/sic/cominfo/A122900.jpg" alt="회사로고"
-									onerror='this.src="http://menu.itooza.com/sic/cominfo/empty_logo.jpg";' /></a></p>
+									src="https://kimg.choicestock.co.kr/img/logo/122900.jpg" alt="회사로고"
+									onerror='this.src="../images/common//empty_logo.jpg";' /></a></p>
 						<p class="name" style="width: 150px;"><a href="/stockbot/search.php?sn=122900">아이마켓코리아</a></p>
 					</div>
 					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img
-								src="http://menu.itooza.com/minwise/t-sst/cont/ico_txt_blue_chip.png" alt="우량주" /></a>
+								src="../images/cont/ico_txt_blue_chip.png" alt="우량주" /></a>
 					</p>
 					<p class="desc">인터파크 계열의 B2B 전자상거래 회사</p>
 				</div>
@@ -110,17 +109,13 @@
 						</colgroup>
 						<thead>
 							<tr>
-								<th class="th01"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_analysis_tbl_01.png"
-										class="pdl_10" alt="투자의견" /></th>
-								<th class="th02"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_analysis_tbl_02.png"
-										class="pdl_10" alt="목표가" /></th>
-								<th class="th03"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_target_tbl_01.png"
-										class="pdl_10" alt="추천가" /></th>
-								<th class="th04"><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_analysis_tbl_04.png"
+								<th class="th01"><img src="../images/cont/add/txt_analysis_tbl_01.png" class="pdl_10"
+										alt="투자의견" /></th>
+								<th class="th02"><img src="../images/cont/add/txt_analysis_tbl_02.png" class="pdl_10"
+										alt="목표가" /></th>
+								<th class="th03"><img src="../images/cont/add/txt_target_tbl_01.png" class="pdl_10"
+										alt="추천가" /></th>
+								<th class="th04"><img src="../images/cont/add/txt_analysis_tbl_04.png"
 										style="height: 17px;" class="pdl_15" alt="기대수익률" /></th>
 							</tr>
 						</thead>
@@ -132,11 +127,9 @@
 								<td class="td04 txt nonebg"><span class="f22 increase">26.0</span><span>%</span></td>
 							</tr>
 							<tr>
-								<th class="th05" colspan=2><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_recommend_tbl_add1.png"
+								<th class="th05" colspan=2><img src="../images/cont/add/txt_recommend_tbl_add1.png"
 										class="pdl_10" alt="상승시 분할 매도가" /></th>
-								<th class="th06" colspan=2><img
-										src="http://menu.itooza.com/minwise/t-sst/cont/add/txt_recommend_tbl_add2.png"
+								<th class="th06" colspan=2><img src="../images/cont/add/txt_recommend_tbl_add2.png"
 										class="pdl_10" alt="하락시 손절 매도가" /></th>
 							</tr>
 							<tr>
@@ -154,28 +147,25 @@
 
 			<!--신규매수, 비중확대 하단 컨텐츠-->
 			<div class="inbox score_wrap">
-				<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_01.png" alt="종합 분석 결과" /></h5>
+				<h5><img src="../images/cont/h4_tit_01.png" alt="종합 분석 결과" /></h5>
 				<p class="total_score"> <span class="score">221</span><span class="txt">점</span> </p>
 				<ul class="instrument_wrap">
 					<li>
-						<p class="tit"><img src="http://menu.itooza.com/superstocks/mobile/cont/txt_score_type3.png"
-								alt="수급분석" /></p>
-						<img src="http://menu.itooza.com/superstocks/mobile/cont/score/img_score_instrument_091.png"
-							class="img_instrument" alt="점수이미지" />
+						<p class="tit"><img src="../images/cont/txt_score_type3.png" alt="수급분석" /></p>
+						<img src="../images/cont/score/img_score_instrument_091.png" class="img_instrument"
+							alt="점수이미지" />
 						<p class="score"><span>91</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="http://menu.itooza.com/superstocks/mobile/cont/txt_score_type2.png"
-								alt="밸류에이션" /></p>
-						<img src="http://menu.itooza.com/superstocks/mobile/cont/score/img_score_instrument_090.png"
-							class="img_instrument" alt="점수이미지" />
+						<p class="tit"><img src="../images/cont/txt_score_type2.png" alt="밸류에이션" /></p>
+						<img src="../images/cont/score/img_score_instrument_090.png" class="img_instrument"
+							alt="점수이미지" />
 						<p class="score"><span>90</span>점</p>
 					</li>
 					<li>
-						<p class="tit"><img src="http://menu.itooza.com/superstocks/mobile/cont/txt_score_type1.png"
-								alt="펀더멘탈" /></p>
-						<img src="http://menu.itooza.com/superstocks/mobile/cont/score/img_score_instrument_040.png"
-							class="img_instrument" alt="점수이미지" />
+						<p class="tit"><img src="../images/cont/txt_score_type1.png" alt="펀더멘탈" /></p>
+						<img src="../images/cont/score/img_score_instrument_040.png" class="img_instrument"
+							alt="점수이미지" />
 						<p class="score"><span>40</span>점</p>
 					</li>
 				</ul>
@@ -189,8 +179,7 @@
 						</div>
 						<!--투자포인트-->
 						<div class="inbox">
-							<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_02.png?pp=001"
-									alt="투자 포인트" /></h5>
+							<h5><img src="../images/cont/h4_tit_02.png?pp=001" alt="투자 포인트" /></h5>
 							<ul class="investment_point">
 								<li>2016년 4분기 연결 실적: 매출액 1조800억원(전년 동기비 +24%), 영업이익 237억원(+89%), 순이익(지배) 72억원(+4%) ※
 									매출액과 영업이익, 시장 컨센서스(최근 1개월간 추정치 평균)를 각각 15%와 90% 상회</li>
@@ -204,8 +193,7 @@
 					<div class="group2 dpb swiper-slide">
 						<!--주요 투자지표-->
 						<div class="inbox ofh">
-							<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_03.png?pp=001"
-									alt="주요 투자지표" /></h5>
+							<h5><img src="../images/cont/h4_tit_03.png?pp=001" alt="주요 투자지표" /></h5>
 							<ul class="total_info">
 								<li>
 									<p class="title">EPS<span>주당순이익</span></p>
@@ -242,7 +230,7 @@
 
 						<!--v차트 분석 (특허출원)-->
 						<div class="inbox">
-							<!--h5><img src="http://menu.itooza.com/superstocks/mobile/cont/h4_tit_04.png" alt="v차트 분석 (특허출원)" /></h5-->
+							<!--h5><img src="../images/cont/h4_tit_04.png" alt="v차트 분석 (특허출원)" /></h5-->
 							<div style="padding: 0 20px;">
 								<div id="chartContainer1">
 									<iframe frameborder="0" allowtransparency="true"
@@ -256,7 +244,7 @@
 					<div class="group3 dpb swiper-slide">
 						<!--기업정보-->
 						<div class="inbox">
-							<h5><img src="http://menu.itooza.com/minwise/t-sst/cont/h4_tit_05.png?pp=001" alt="기업정보" />
+							<h5><img src="../images/cont/h4_tit_05.png?pp=001" alt="기업정보" />
 							</h5>
 							<table border="0" class="tbl_ainfo01">
 								<colgroup>
@@ -304,8 +292,7 @@
 			<div class="wrap">
 				<p class="center f12">본 서비스는 민앤지가 아이투자와 제휴하여<br />
 					제공하는 프리미엄 주식서비스 입니다.</p>
-				<p class="cs_txt"><span><img
-							src="http://menu.itooza.com/minwise/t-sst/common/tit_footer_customer_center.png" alt="고객센터"
+				<p class="cs_txt"><span><img src="../images/common/tit_footer_customer_center.png" alt="고객센터"
 							class="vam" style="height: 22px;"></span><span
 						class="bold pdt_5 f14 pdl_5">1599-7416</span><span class=" pdt_5 pdl_5">평일 09시~18시</span></p>
 			</div>
